--- a/99_PRACTICE/01_leetLab/frontend/package.json
+++ b/99_PRACTICE/01_leetLab/frontend/package.json
@@ -18,7 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
-    "react-hook-toast": "^0.0.3",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.14",
