--- a/99_PRACTICE/01_leetLab/frontend/package.json
+++ b/99_PRACTICE/01_leetLab/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "daisyui": "^5.0.50",
     "lucide-react": "^0.534.0",
+    "npm": "^11.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
